k8s/bootstrap/network/02-gateway/resources/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: shared-gateway
  namespace: gateway-system
spec:
  gatewayClassName: envoy-gateway
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
  - name: https
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: argocd-tls
      - kind: Secret
        name: grafana-tls
      - kind: Secret
        name: prometheus-tls
      - kind: Secret
        name: uptime-tls
      - kind: Secret
        name: n8n-tls
    allowedRoutes:
      namespaces:
        from: All
